welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:30: error: Unmatched closing brace '}' ignored here
    }
    ^